Fix notification menu height / transparency issue in firefox

--- a/ui/scss/component/menu-button.scss
+++ b/ui/scss/component/menu-button.scss
@@ -216,7 +216,7 @@ reach-portal {
 
   .menu__list--notifications-list {
     overflow-y: scroll;
-    height: 388px;
+    max-height: 388px;
     .menu__list--notification {
       position: relative;
       overflow: hidden !important;
