--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -77,6 +77,20 @@
   font-weight: var(--font-weight-bold);
 }
 
+.card--share {
+  .form-field--copyable {
+    border: unset !important;
+  }
+  .button--secondary {
+    background-color: var(--color-primary) !important;
+    box-shadow: 0 0 0 2px transparent inset !important;
+
+    .icon {
+      stroke: var(--color-primary-contrast) !important;
+    }
+  }
+}
+
 .card--inline {
   border-radius: var(--card-radius);
   margin-bottom: var(--spacing-m);
