--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -350,6 +350,8 @@ a.button--alt {
   background-color: transparent;
   margin-right: var(--spacing-m);
   padding: 0 var(--spacing-xxs);
+  height: initial;
+  padding: 5px;
 
   &.button--file-action-active {
     .icon {
@@ -378,9 +380,6 @@ a.button--alt {
   }
 
   &:hover {
-    .icon {
-      stroke: var(--color-link);
-    }
     .button__label {
       color: var(--color-link);
     }
