Add platforms to share buttons (#1721)
* Add Minds to share buttons

* Add Telegram & WhatsApp

* Adjust style on mobile

* Adjust WhatsApp share url on desktop

* Freeze icon size

* Adjust share buttons

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -89,6 +89,26 @@
       stroke: var(--color-primary-contrast) !important;
     }
   }
+  .section__actions {
+    margin-top: var(--spacing-m);
+  }
+
+  @media (max-width: $breakpoint-small) {
+    .section__actions {
+      .share {
+        .icon {
+          margin-right: var(--spacing-xxs);
+          margin-bottom: var(--spacing-xs);
+        }
+      }
+      &:last-child {
+        margin-right: 0 !important;
+        .icon {
+          margin-right: 0 !important;
+        }
+      }
+    }
+  }
 }
 
 .card--inline {
