vertically align character counter and emoji button

--- a/ui/scss/component/_form-field.scss
+++ b/ui/scss/component/_form-field.scss
@@ -547,7 +547,7 @@ fieldset-group {
   text-align: right;
 
   span {
-    display: inline-block;
+    vertical-align: super;
     padding-right: 0px;
   }
 }
