Fix button padding on mobile

--- a/ui/scss/component/_header.scss
+++ b/ui/scss/component/_header.scss
@@ -485,6 +485,7 @@
       .button__content {
         align-items: center;
         justify-content: center;
+        color: var(--color-primary-contrast);
       }
     }
   }
