--- a/ui/scss/component/_modal.scss
+++ b/ui/scss/component/_modal.scss
@@ -125,6 +125,7 @@
           padding: 0;
           .button__content {
             .button__label {
+              margin-left: var(--spacing-s);
               font-size: var(--font-small);
             }
           }
