Preorder content functionality (#1743)
* adding preorder button

* adding preorder modal

* frontend mostly done

* check if its already purchased

* refresh page after purchase

* smooth out purchase process

* check if user has card saved

* handle case where its the users own upload

* fix transaction listing order bug

* cleaning up code for merge

* fix lint errors

* fix flow errors

* allow eur purchases

* support eur on customer transaction page

* fix css

--- a/ui/scss/all.scss
+++ b/ui/scss/all.scss
@@ -46,6 +46,7 @@
 @import 'component/notification';
 @import 'component/nudge';
 @import 'component/pagination';
+@import 'component/preorder-button';
 @import 'component/post';
 @import 'component/purchase';
 @import 'component/placeholder';
