--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -41,7 +41,7 @@
         margin: 0px var(--spacing-xxs);
       }
 
-      .button + .commentCreate {
+      .button + .comment-create {
         margin-top: var(--spacing-xxs);
       }
     }
