--- a/ui/scss/component/_ads.scss
+++ b/ui/scss/component/_ads.scss
@@ -392,6 +392,7 @@
   height: 26px;
   padding-top: 2px;
   background-color: var(--color-primary);
+  color: var(--color-primary-contrast);
   border-radius: var(--border-radius) var(--border-radius) 0 0 !important;
   text-align: center;
 
