changed the color of the editor-toolbar_hover class

--- a/ui/scss/component/_markdown-editor.scss
+++ b/ui/scss/component/_markdown-editor.scss
@@ -116,7 +116,7 @@
       border: transparent;
 
       &:hover {
-        color: var(--color-header-link-active);
+        color: var(--color-primary-dynamic);
       }
     }
   }
