--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -378,12 +378,44 @@ a.button--alt {
   }
 
   &:hover {
-    .icon {
-      stroke: var(--color-link);
-    }
     .button__label {
       color: var(--color-link);
     }
+  }
+}
+
+.button--comment-icons {
+  @extend .button--alt;
+  color: var(--color-text);
+  background-color: transparent;
+  margin-right: var(--spacing-m);
+  padding: 0 var(--spacing-xxs);
+  height: initial;
+  padding: 5px;
+
+  @media (max-width: $breakpoint-small) {
+    padding: 0 0;
+  }
+
+  .icon {
+    &:not(.color-override) {
+      stroke: var(--color-text);
+    }
+  }
+
+  .button__label {
+    min-width: 10px;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &:hover {
+    .button__label {
+      color: var(--color-link);
+    }
+    background-color: var(--color-primary);
   }
 }
 
